fixing styling and spacing issues

--- a/index.css
+++ b/index.css
@@ -5,20 +5,26 @@
 }
 
 #backgroundImage {
-    background-image: url(images/Vector_20180904_012.jpg);
-    background-attachment: fixed;
+    margin: auto;
+    background-image: url(images/shiplap-wall.jpg);
     background-position: center;
     border-radius: 10px;
-    height: 100%;
-    max-width: 1025px;
+    height: 75%;
+    max-width: 1075px;
+    text-align: center;
   }
 
-.plantBox{
+.plantBox {
   border-style: dashed;
-  border-color: floralwhite;
-  margin: 10px;
-  height: 205px;
-  width: 205px;
+  border-color:black;
+  margin: 5px;
+  width: 15%;
+  aspect-ratio: 1/1;
+}
+
+.plantImage {
+max-width: 100%;
+max-height: 100%;
 }
 
 .plantBoxes {
@@ -33,20 +39,19 @@
   width: 100%;
 }
 
-#shelf3 {
-  padding-bottom: 250px;
-}
-
 #searchDropdown {
   padding: 5px;
-  font-size: 100px;
+}
+
+#navbarDropdownMenuLink {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 100px;
 }
 
 .primary-header {
-padding: 5px;
-font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-font-size: 100px;
-color: black;
-text-align: left;
+  padding: 5px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 100px;
+  color: black;
+  text-align: left;
 }
